--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 		</div>
 	</section>
 	<!-- hero end -->
-
+	
+	<!-- body start -->
 	<section class="body">
 		<div class="container-fluid">
 			<div class="row">
@@ -73,7 +74,9 @@
 			</div>
 		</div>
 	</section>
-
+	<!-- body end -->
+	
+	<!-- footer start -->
 	<section class="footer">
 		<div class="container-fluid">
 			<div class="row">
@@ -83,6 +86,7 @@
 			</div>
 		</div>
 	</section>
+	<!-- footer end -->
 
 	
 	
